--- a/index.htm
+++ b/index.htm
@@ -382,8 +382,8 @@
                         <div class="exp-content">
                             <p class="exp-description">
                                 Began supporting <strong>GridStrong.ai</strong> in <strong>September 2024</strong> as a
-                                <strong>Product Advisor</strong>, creating early prototypes and helping secure a
-                                <strong>$1.4M U.S. Department of Energy grant</strong>. After seed funding, joined
+                                part-time <strong>Product Advisor</strong> while at HVAC.com, creating early prototypes and helping secure a
+                                <strong>$1.4M U.S. Department of Energy grant</strong>. After seed funding closed in <strong>June 2025</strong>, joined
                                 full‑time as <strong>Director of Product Management</strong>, leading product strategy,
                                 engineering, and design across the compliance automation platform.
                             </p>
