--- a/kevinos/index.html
+++ b/kevinos/index.html
@@ -429,9 +429,9 @@
                                 <div class="exp-date">Sep 2024 — Nov 2025</div>
                             </div>
                             <div class="exp-detail">
-                                <p>Began supporting GridStrong.ai in September 2024 as a Product Advisor, creating early
+                                <p>Began supporting GridStrong.ai in September 2024 as a part-time Product Advisor while at HVAC.com, creating early
                                     prototypes and helping secure a $1.4M U.S. Department of Energy grant. After seed
-                                    funding, joined full‑time as Director of Product Management, leading product
+                                    funding closed in June 2025, joined full‑time as Director of Product Management, leading product
                                     strategy, engineering, and design across the compliance automation platform.</p>
                                 <ul class="exp-highlights">
                                     <li><strong>Funding & Early Traction:</strong> Secured foundational funding by
