--- a/catdad/index.htm
+++ b/catdad/index.htm
@@ -147,7 +147,7 @@
           <button class="btn kawaii-btn boing" onclick="handleCTA()">Let's talk 🐱</button>
           <a href="#serious-stuff" class="btn kawaii-btn-ghost">Wait, is this person legit? →</a>
         </div>
-        <a href="https://middleton.io/kevinos/" class="escape-link" target="_blank">← try KevinOS</a>
+        <a href="https://middleton.io/kevinos/" class="escape-link" target="_blank">try KevinOS <svg style="width: 0.9em; height: 0.9em; margin-left: 0.15em; vertical-align: -0.1em;" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"><path d="M7 17L17 7M17 7H7M17 7V17"/></svg></a>
       </section>
 
       <div class="section-divider">・。.・゜✭<br class="mobile-break">・.・✫・゜・。.</div>
