--- a/fixer/index.htm
+++ b/fixer/index.htm
@@ -193,7 +193,7 @@
 
       <!-- Back to main site -->
       <footer class="fixer-footer">
-        <p><a href="https://middleton.io/">← Back to middleton.io</a></p>
+        <p><a href="https://middleton.io/">See my full portfolio <svg style="width: 0.9em; height: 0.9em; margin-left: 0.15em; vertical-align: -0.1em;" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"><path d="M7 17L17 7M17 7H7M17 7V17"/></svg></a></p>
       </footer>
 
     </div>
