--- a/nyc/index.htm
+++ b/nyc/index.htm
@@ -152,7 +152,7 @@
           <a href="#cta" class="nyc-hero-link">Let's talk →</a>
           <a href="#proof" class="nyc-hero-link secondary">See my background →</a>
         </div>
-        <a href="https://middleton.io" target="_blank" class="nyc-hero-link secondary" style="margin-top: var(--spacing-md); display: inline-block; font-size: 0.9rem;">Full portfolio <span style="display: inline-block; transform: rotate(-45deg);">→</span></a>
+        <a href="https://middleton.io" target="_blank" class="nyc-hero-link secondary" style="margin-top: var(--spacing-md); display: inline-block; font-size: 0.9rem;">Full portfolio <svg style="width: 0.9em; height: 0.9em; margin-left: 0.15em; vertical-align: -0.1em;" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"><path d="M7 17L17 7M17 7H7M17 7V17"/></svg></a>
       </section>
 
       <!-- WHO THIS IS FOR -->
