--- a/officehours/index.htm
+++ b/officehours/index.htm
@@ -119,7 +119,7 @@
             <span>Grab a slot</span>
             <span class="oh-btn-arrow">→</span>
           </a>
-          <a href="https://middleton.io/" target="_blank" rel="noopener noreferrer" class="oh-hero-link">Who's on the other side? →</a>
+          <a href="https://middleton.io/" target="_blank" rel="noopener noreferrer" class="oh-hero-link">Who's on the other side? <svg style="width: 0.9em; height: 0.9em; margin-left: 0.15em; vertical-align: -0.1em;" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"><path d="M7 17L17 7M17 7H7M17 7V17"/></svg></a>
         </div>
       </header>
 
