--- a/index.htm
+++ b/index.htm
@@ -1324,7 +1324,7 @@
                                         <div class="rec-author-block">
                                             <span class="rec-author-name">
                                                 Matt Triplett
-                                                <span class="rec-inline-pill">Manager</span>
+                                                <span class="rec-inline-pill">Former Manager</span>
                                             </span>
                                             <span class="rec-role">Product Leader</span>
                                         </div>
