--- a/index.htm
+++ b/index.htm
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-    <meta name="theme-color" content="#f4f4f7" media="(prefers-color-scheme: light)">
-    <meta name="theme-color" content="#0f1115" media="(prefers-color-scheme: dark)">
+    <meta name="theme-color" content="#A48CF9">
     <title>Kevin Middleton - Full Stack Product Manager</title>
     <meta name="description"
         content="Kevin Middleton is a Full Stack Product Manager with 12+ years of experience building consumer, enterprise, and platform SaaS products.">
@@ -158,6 +157,16 @@
                 <p class="hero-side-project">
                     💻 Currently tinkering with: <a href="https://middleton.io/kevinos" target="_blank">KevinOS</a>
                 </p>
+
+                <!-- Tour Link -->
+                <a class="tour-link" onclick="startTour()">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <circle cx="12" cy="12" r="10"></circle>
+                        <path d="M12 16v-4"></path>
+                        <path d="M12 8h.01"></path>
+                    </svg>
+                    Take a tour
+                </a>
             </div>
         </section>
 
@@ -1424,6 +1433,15 @@
     <!-- Confetti Library -->
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <script src="script.js"></script>
+
+    <!-- KevBot Chat Widget -->
+    <script src="kevbot/kevbot.js"></script>
+    <script>
+        KevBot.init('https://kevbot.kevin-middleton.workers.dev');
+    </script>
+
+    <!-- Site Tour -->
+    <script src="tour.js"></script>
 </body>
 
 </html>
